# order-system

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_login.py
.github/workflows/: docs.yml
backend/: alembic.ini  auth_routes.py  config.py  database.py  dependencies.py  main.py  models.py  order_routes.py  schemas.py  testes.py  utils.py
backend/alembic/: env.py
backend/alembic/versions/: 0e8028701bbf_adicionar_admin_usuario.py  26bac5f0b4bf_adicionar_itens_no_pedido.py  6d80a5480493_initial_migration.py  7ecabdec423f_remover_admin_usuario.py
frontend/: api_client.py  dashboard.py  dashboard_app.py  main.py  utils.py
frontend/.streamlit/: config.toml
frontend/tests/: test_dashboard.py
order-system-docs/: mkdocs.yml
order-system-docs/docs/: contributing.md  database-migrations.md  index.md
order-system-docs/docs/api/: authentication.md  orders.md  users.md
order-system-docs/docs/deployment/: docker.md  production.md
order-system-docs/docs/frontend/: components.md  dashboard.md
order-system-docs/docs/getting-started/: configuration.md  installation.md  quick-start.md
order-system-docs/docs/stylesheets/: extra.css
tokens/: access_token.txt  refresh_token.txt
