[project]
name = "order-management-system"
version = "1.0.0"
description = "Modern order management with FastAPI, Streamlit & UV"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.16.1",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "bcrypt==4.3.0",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "cryptography==45.0.4",
    "ecdsa==0.19.1",
    "fastapi==0.115.12",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "httpx>=0.28.1",
    "idna==3.10",
    "logging>=0.4.9.6",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "passlib==1.7.4",
    "pyasn1==0.6.1",
    "pycparser==2.22",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pytest>=8.4.1",
    "python-dotenv==1.1.0",
    "python-jose==3.5.0",
    "python-multipart==0.0.20",
    "requests==2.32.4",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "sqlalchemy-utils==0.41.2",
    "starlette==0.46.2",
    "streamlit>=1.46.1",
    "ttkbootstrap>=1.13.11",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "urllib3==2.4.0",
    "uvicorn==0.34.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0", 
    "ruff>=0.1.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]

# Ruff configuration (replaces Black)
[tool.ruff]
line-length = 88
target-version = "py313"

# Ruff formatting configuration
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Ruff linting configuration  
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py

# Remove Black configuration since you're using Ruff
# [tool.black] <- Remove this section